updated first blog post

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,18 +1,27 @@
 
 .highlight {
-  background-color: #efefef;
-  padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
-  margin: 20px 0 20px 0;
+  background-color: #ffffff;//background-color: #efefef;
+  padding: 7px 7px 7px 0px;
+  border: 0px solid #ddd;
+  -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px rgba(0,0,0,0.1);
+  margin: 20px 20px 20px 0;
   overflow: scroll;
+  max-width: 740px;
 }
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-size:0.8125em;
+  border: 0px solid #ddd;
+  -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px rgba(0,0,0,0);
+  margin: 10px 10px 0px 0;
+  padding: 10px 10px 0px 0px;
 }
+
 
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: #93A1A1 } /* Error */
