--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,25 +1,53 @@
 
 .highlight {
-  background-color: #ffffff;//background-color: #efefef;
-  padding: 7px 7px 7px 0px;
-  border: 0px solid #ddd;
-  -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 0px rgba(0,0,0,0.1);
-  margin: 20px 20px 20px 0;
-  overflow: scroll;
-  max-width: 740px;
+  background-color: #eef;//background-color: #efefef;
+  //padding: 0px 0px 7px 0px;
+  //border: 0px solid #ddd;
+  //-moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  //-webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
+ // box-shadow: 0px 0px rgba(0,0,0,0.1);
+ // margin: 20px 20px 20px 0;
+  // overflow: scroll;
+ max-width: 640px;
 }
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
   font-size:0.8125em;
-  border: 0px solid #ddd;
-  -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 0px rgba(0,0,0,0);
-  margin: 10px 10px 0px 0;
-  padding: 10px 10px 0px 0px;
+  //border: 1px solid #d5d5e9;//border: 0px solid #ddd;
+  //-moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  //-webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  //box-shadow: 0px 0px rgba(0,0,0,0);
+  //margin: 0px 0px 0px 0px;
+  //padding: 0px 0px 0px 0px;
+  padding: 1px 5px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #eef;
+  overflow:auto;
+  line-height: 1.25;
+}
+
+.post pre,
+.post code {
+  border: 1px solid #d5d5e9;
+  background-color: #eef;
+  padding: 8px 12px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  font-size: 15px;
+  overflow:auto;
+  line-height: 1.25;
+}
+
+.post code { padding: 1px 5px; }
+
+.post pre code {
+  border: 0;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 
