--- a/style.scss
+++ b/style.scss
@@ -142,6 +142,16 @@ img {
     clear: both;
 }
 
+.imgcap_noborder img {
+  max-width: 100%;
+}
+.imgcap_noborder {
+  color: #555;
+  font-size: 14px;
+  text-align: center;
+}
+
+
 /*********************/
 /* LAYOUT / SECTIONS */
 /*********************/
