--- a/style.scss
+++ b/style.scss
@@ -151,10 +151,13 @@ img {
   text-align: center;
 }
 
+
 .row {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
+  max-width: 100%;
+  text-align: center;
 }
 
 /* Create two equal columns that sits next to each other */
@@ -166,6 +169,14 @@ img {
 .column img {
   margin-top: 8px;
   vertical-align: middle;
+}
+
+.row .thecap {
+  flex: 50%;
+  text-align: center;
+  color: #555;
+  font-size: 14px;
+
 }
 
 
